Fix weird render error caused by whitespace in badges

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 html {
+  overflow: hidden;
   max-width: 800px;
   margin: auto;
 }
